GearsetPOC/force-app/main/default/objects/FPU_Availability_Criteria__c/FPU_Availability_Criteria__c.object-meta.xml
<CustomObject>
    <description>To enter availability criterias for FPU Update</description>
    <label>FPU Eligibility Criteria</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>FPU_Availability_Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FPU Eligibility Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>