GearsetPOC/force-app/main/default/objects/FPU_Availability_Criteria__c/fields/FPU_AvailCrit_FBC__c.field-meta.xml
<CustomField>
    <fullName>FPU_AvailCrit_FBC__c</fullName>
    <description>FBC Details</description>
    <inlineHelpText>FBC Details</inlineHelpText>
    <label>FBC</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>