GearsetPOC/force-app/main/default/objects/FPU_Availability_Criteria__c/fields/FPU_AvailCrit_LastOffer_Proposed__c.field-meta.xml
<CustomField>
    <fullName>FPU_AvailCrit_LastOffer_Proposed__c</fullName>
    <description>Proposed Last Offer</description>
    <label>LastOffer_Proposed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>