GearsetPOC/force-app/main/default/objects/FPU_Availability_Criteria__c/fields/FPU_AvailCrit_PaxType__c.field-meta.xml
<CustomField>
    <fullName>FPU_AvailCrit_PaxType__c</fullName>
    <description>Pax Type</description>
    <inlineHelpText>Pax Type</inlineHelpText>
    <label>PaxType</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>