GearsetPOC/force-app/main/default/objects/FPU_Availability_Criteria__c/fields/FPU_AvailCrit_Status__c.field-meta.xml
<CustomField>
    <fullName>FPU_AvailCrit_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the offer is valid or not</description>
    <inlineHelpText>If the offer is valid or not</inlineHelpText>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>