GearsetPOC/force-app/main/default/objects/FPU_Availability_Criteria__c/fields/FPU_AvailCrit_TravelPeriod_ToDate__c.field-meta.xml
<CustomField>
    <fullName>FPU_AvailCrit_TravelPeriod_ToDate__c</fullName>
    <description>To date of travel period for which offer is valid</description>
    <inlineHelpText>To date of travel period for which offer is valid</inlineHelpText>
    <label>TravelPeriod_ToDate</label>
    <type>Date</type>
</CustomField>