GearsetPOC/force-app/main/default/objects/FPU_Availability_Criteria__c/validationRules/TravelPeriodValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TravelPeriodValidation</fullName>
    <active>true</active>
    <errorConditionFormula>FPU_AvailCrit_TravelPeriod_FromDate__c &gt; FPU_AvailCrit_TravelPeriod_ToDate__c</errorConditionFormula>
    <errorMessage>Travel Period From should be earlier than  Travel Period To</errorMessage>
</ValidationRule>