GearsetPOC/force-app/main/default/objects/FPU_Availability_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FPU_AvailCrit_FBC__c</columns>
    <columns>FPU_AvailCrit_PaxType__c</columns>
    <columns>FPU_AvailCrit_Status__c</columns>
    <columns>FPU_AvailCrit_LastOffer_Bought__c</columns>
    <columns>FPU_AvailCrit_LastOffer_Proposed__c</columns>
    <columns>FPU_AvailCrit_TravelPeriod_FromDate__c</columns>
    <columns>FPU_AvailCrit_TravelPeriod_ToDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>